--- a/project.yaml
+++ b/project.yaml
@@ -464,7 +464,7 @@ actions:
 
   generate_hba1c_2018_2019_data:
     run: r:latest analysis/hba1c_2018_2019.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/hba1c_2019_summary.feather
@@ -475,7 +475,7 @@ actions:
        
   generate_hba1c_2020_2021_data:
     run: r:latest analysis/hba1c_2020_2021.R --output-dir=output/data --output-format feather
-    needs: [join_ethnicity]
+    needs: [join_meds]
     outputs:
       highly_sensitive:
         cohort1: output/data/hba1c_2020_summary.feather
