--- a/project.yaml
+++ b/project.yaml
@@ -225,7 +225,12 @@ actions:
       highly_sensitive:
         cohort1: output/data/all_bmi_long.feather
 
-        
+  generate_BMI_trajectories_data:
+    run: r:latest analysis/bmi_change.R --output-dir=output/data --output-format feather
+    needs: [generate_complete_long_BMI_data]
+    outputs:
+      highly_sensitive:
+        cohort1: output/data/BMI_trajectories.feather     
 ##################################################################
 ### >> HAD_BMI ANALYSIS
 ######################################################################
