--- a/project.yaml
+++ b/project.yaml
@@ -232,6 +232,16 @@ actions:
       highly_sensitive:
         cohort1: output/data/BMI_demog.feather     
         cohort2: output/data/BMI_all_long_sample.feather 
+
+  generate_BMI_trajectories_data2:
+    run: r:latest analysis/BMI_change_2.R --output-dir=output/data --output-format feather
+    needs: [generate_BMI_trajectories_data1]
+    outputs:
+      highly_sensitive:
+        cohort1: output/data/BMI_trajectories.feather     
+
+
+
 ##################################################################
 ### >> HAD_BMI ANALYSIS
 ######################################################################
