--- a/project.yaml
+++ b/project.yaml
@@ -240,6 +240,13 @@ actions:
       highly_sensitive:
         cohort1: output/data/BMI_trajectories.feather     
 
+  generate_BMI_trajectories_data3:
+    run: r:latest analysis/BMI_change_3.R --output-dir=output/data --output-format feather
+    needs: [generate_BMI_trajectories_data2, generate_BMI_trajectories_data1]
+    outputs:
+      highly_sensitive:
+        cohort1: output/data/BMI_trajectories_final.feather 
+
 
 
 ##################################################################
