--- a/project.yaml
+++ b/project.yaml
@@ -345,7 +345,12 @@ actions:
       moderately_sensitive:
         table1: output/data/median_range_bmi_2021.csv
 
-
+  complete_bmi_trajectory_data:
+    run: r:latest analysis/proportion_complete_BMI_trajectory.R --output-dir=output/data 
+    needs: [generate_BMI_trajectories_data3]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/complete_bmi_trajectories_proportions.csv
 
 
 ###########################  
