--- a/project.yaml
+++ b/project.yaml
@@ -355,6 +355,15 @@ actions:
       moderately_sensitive:
         table1: output/data/complete_bmi_trajectories_proportions.csv
 
+  bmi_change_plots:
+    run: r:latest analysis/BMI_change_plot.R --output-dir=output/data 
+    needs: [generate_BMI_trajectories_data3]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/short_bmi_change_summary.csv
+        chart1: output/bmi_change_plot.png
+        chart2: output/bmi_change_plot_age.png
+
 
 
   prepandemic_bmi_changes:
