--- a/project.yaml
+++ b/project.yaml
@@ -373,13 +373,13 @@ actions:
         table2: output/data/time1_error.csv
 
 
-  prepandemic_bmi_changes:
+  pandemic_bmi_changes:
     run: r:latest analysis/prepandemic_BMI_change.R --output-dir=output/data 
     needs: [generate_BMI_trajectories_data3]
     outputs:
       moderately_sensitive:
         table1: output/data/prepandemic_bmi_change_per_year.csv
-        
+        table2: output/data/postpandemic_bmi_change_per_year.csv
 ###########################  
 ## DWMP Eligible
 
