--- a/project.yaml
+++ b/project.yaml
@@ -247,6 +247,15 @@ actions:
       highly_sensitive:
         cohort1: output/data/BMI_trajectories_final.feather 
 
+  BMI_trajectories_demographics_correction:
+    run: r:latest analysis/BMI_change_demographic_correction.R --output-dir=output/data --output-format feather
+    needs: [generate_BMI_trajectories_data3, generate_complete_long_BMI_data]
+    outputs:
+      highly_sensitive:
+        cohort1:output/data/BMI_trajectories_final_demog.feather
+      moderately_sensitive:
+        table1: output/data/BMI_traj_demog.png
+        table2: outpute/data/BMI_traj_demog.html 
 
 
 ##################################################################
