--- a/project.yaml
+++ b/project.yaml
@@ -373,6 +373,15 @@ actions:
         chart1: output/bmi_change_plot.png
         chart2: output/bmi_change_plot_age.png
 
+
+  bmi_change_extremes:
+    run: r:latest analysis/BMI_change_check_extremes.R --output-dir=output/data 
+    needs: [BMI_trajectories_demographics_correction]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/short_bmi_change_extremes.csv
+
+
   bmi_timeinterval_check:
     run: r:latest analysis/check_timeintervals_BMI_change.R --output-dir=output/data 
     needs: [generate_BMI_trajectories_data3]
