--- a/project.yaml
+++ b/project.yaml
@@ -668,8 +668,9 @@ actions:
         
   round_tables:
     run: r:latest analysis/admin_round_redact_table.R --output-dir=output/data --output-format feather
-    needs: [bmi_change_univariate]
+    needs: [bmi_change_univariate, bmi_change_category_tables]
     outputs:
       moderately_sensitive:
         table1: output/data/rapid_bmi_change_popcharac_round.csv
-
+        table2: output/data/precovid_bmi_trajectories.round.csv
+        table3: output/data/postcovid_bmi_trajectories.round.csv
