--- a/project.yaml
+++ b/project.yaml
@@ -372,6 +372,8 @@ actions:
         table1: output/data/short_bmi_change_summary.csv
         chart1: output/bmi_change_plot.png
         chart2: output/bmi_change_plot_age.png
+        chart3: output/bmi_change_plot_counts.png
+        chart4: output/bmi_change_plot_age_counts.png
 
 
   bmi_change_extremes:
