--- a/project.yaml
+++ b/project.yaml
@@ -501,6 +501,9 @@ actions:
     outputs:
       moderately_sensitive: 
         table1: output/data/univariate_bmi_trajectory_change.csv
+        table2: output/data/univariate_bmi_trajectory_change_hypertension.csv
+        table3: output/data/univariate_bmi_trajectory_change_T1DM.csv
+        table4: output/data/univariate_bmi_trajectory_change_T2DM.csv
 
   bmi_trajectory_change_model_age: 
     run: r:latest analysis/BMI_change_diff_trajectories_age_model.R --output-dir=output/data 
