--- a/project.yaml
+++ b/project.yaml
@@ -552,6 +552,15 @@ actions:
         table3: output/data/univariate_lowbmi_excluded_bmi_trajectory_change_T1DM.csv
         table4: output/data/univariate_lowbmi_excluded_bmi_trajectory_change_T2DM.csv
 
+  bmi_trajectory_change_lowbmi_excluded_age_adjusted: 
+    run: r:latest analysis/BMI_trajectory_change_lowbmi_excluded_age_adjusted.R --output-dir=output/data 
+    needs: [bmi_trajectory_change_summary]
+    outputs:
+      moderately_sensitive: 
+        table1: output/data/age_adjusted_lowbmi_excluded_bmi_trajectory_change.csv
+        table2: output/data/age_adjusted_lowbmi_excluded_bmi_trajectory_change_hypertension.csv
+        table3: output/data/age_adjusted_lowbmi_excluded_bmi_trajectory_change_T1DM.csv
+        table4: output/data/age_adjusted_lowbmi_excluded_bmi_trajectory_change_T2DM.csv
 
 
 ## box plots with filtered data (excluding extreme changes
