--- a/project.yaml
+++ b/project.yaml
@@ -651,6 +651,14 @@ actions:
         table12: output/data/obese_transition_weightloss_2017_age_adj.csv 
         table13: output/data/obese_transition_weightloss_2019_age_adj.csv 
 
+  bmi_category_transitions_admin:
+    run: r:latest analysis/admin_round_bmi_category_transitions.R --output-dir=output/data 
+    needs: [bmi_category_transitions_age_adjusted]
+    outputs:
+      moderately_sensitive:
+        table1: output/data/bmi_category_transitions_round_2.csv
+
+
   bmi_category_transitions_counts: 
     run: r:latest analysis/BMI_category_transitions_counts.R --output-dir=output/data 
     needs: [generate_bmi_category_data]
